correcoes de italicos, siglas e erros de digitacao

--- a/f299-template-pi-paper/Topicos/estadodaarte.tex
+++ b/f299-template-pi-paper/Topicos/estadodaarte.tex
@@ -1,4 +1,4 @@
-O diagnóstico do Transtorno de Déficit de Atenção (TDA) em adultos continua sendo
+O diagnóstico do TDA em adultos continua sendo
 um desafio clínico significativo. Tradicionalmente, o processo diagnóstico baseia-se em
 entrevistas e testes clínicos, autorrelato e relatos de informantes, instrumentos que, embora
 úteis, podem ser afetados por viés retrospectivo, subjetividade do paciente, e simulação dos
@@ -8,8 +8,8 @@ e comportamentais com técnicas de análises automatizadas, aumentou. Estudos re
 têm investigado o uso de jogos digitais sérios como ferramentas de avaliação e treinamento
 cognitivo, com foco na atenção contínua. \textcite{Nascimento2020} exploraram a relação
 entre a prática regular de videogames e o desempenho em atenção sustentada, avaliado
-pelo Conners’ Continuous Performance Test II (CPT II), uma versão amplamente utilizada do
-Teste de Desempenho Contínuo (TDC). Embora não tenham encontrado diferenças de
+pelo \textit{Conners’ Continuous Performance Test II} (CPT II), uma versão amplamente utilizada do
+TDC. Embora não tenham encontrado diferenças de
 performance entre jogadores de videogames de ação, não ação e não jogadores, os autores
 identificaram o sexo como uma variável relevante, pois notara diferença entre tempo de
 reação e número de erros. O estudo destaca a complexidade das interações entre fatores
@@ -18,15 +18,15 @@ classificados como serious games, precisam de cuidados na metodologia e no contr
 variáveis, com o fim de evitar interferências no desempenho atencional.
 
 Nesse contexto, \textcite{Elbaum2020} exploraram o potencial diagnóstico da integração
-entre o MOXO-dCPT (um teste de desempenho contínuo com fases estruturadas de distração
-auditiva e visual) e dados de rastreamento ocular (eye tracking). O estudo contou com uma
+entre o \textit{MOXO-dCPT} (um TDC com fases estruturadas de distrações
+auditivas e visuais) e dados de \textit{eye tracking}. O estudo contou com uma
 amostra de 85 adultos (43 com diagnóstico formal de TDAH e 42 controles saudáveis) e
 analisou o padrão de atenção visual ao longo de diferentes partes do teste. Os resultados
 demonstraram que indivíduos com TDAH apresentaram maior tempo de fixação em áreas
 irrelevantes da tela, particularmente em condições com distrações visuais, o que os autores
 interpretaram como uma medida direta de distratibilidade atencional objetiva. Essa métrica
 comportamental demonstrou maior poder discriminativo em comparação às melhores
-pontuações tradicionais do MOXO. Além disso, os autores propuseram que as partes do teste
+pontuações tradicionais do \textit{MOXO}. Além disso, os autores propuseram que as partes do teste
 com distrações visuais poderiam ser utilizadas isoladamente, reduzindo o tempo do teste e
 mantendo a precisão.
 
@@ -34,17 +34,17 @@ Avançando nesse campo, \textcite{Wiebe2024} criaram uma solução diagnóstica 
 envolve um ambiente de realidade virtual (VR), onde os participantes realizavam um teste de
 desempenho imersivo sob a ocorrência de distrações simuladas em um ambiente 3D.
 Durante a tarefa, foram coletados dados simultâneos de eye tracking, movimentos da
-cabeça, eletroencefalograma (EEG) e desempenho atencional. O modelo de IA foi treinado
+cabeça, eletroencefalograma (EEG) e desempenho atencional. O modelo de IA (inteligência Artificial) foi treinado
 em um conjunto de 50 participantes e testado de forma independente em outro conjunto de
 36 indivíduos. O modelo final, com apenas 11 variáveis selecionadas, alcançou 81\% de
 acurácia, 78\% de sensibilidade e 83\% de especificidade no conjunto de teste.
 
 Os estudos indicam que a utilização de tecnologias de rastreamento ocular, tarefas
 cognitivas com análises embasadas dos dados representam um avanço significativo em
-relação aos métodos tradicionais de diagnóstico. O uso de serious games para coleta de
+relação aos métodos tradicionais de diagnóstico. O uso de \textit{serious games} para coleta de
 dados de desempenho também é eficaz, como mostra o trabalho de Nascimento e Menezes.
-O trabalho de Elbaum et al. oferece um modelo aplicável e eficiente ao integrar eye tracking
-em um teste comercial já existente, o estudo de Wiebe et al. diferencia a proposta ao
+O trabalho de \textcite{Elbaum2020}. oferece um modelo aplicável e eficiente ao integrar \textit{eye tracking}
+em um teste comercial já existente, o estudo de \textcite{Wiebe2024}. diferencia a proposta ao
 incorporar realidade virtual, aprendizado de máquina e validação externa em amostras
 independentes. Juntos, os estudos reforçam a ideia de que sistemas digitais automatizados
 podem melhorar a precisão diagnóstica do TDAH em adultos.
