--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -9,20 +9,19 @@ acesso à saúde e promover o bem estar, ao desenvolver uma plataforma digital g
 com o objetivo de auxiliar nos possíveis indícios do Transtorno de Déficit de Atenção (TDA)
 em adultos.
 
-O Transtorno do Déficit de Atenção é uma condição neurobiológica de causas
-genéticas, que afeta milhões de pessoas em todo o mundo. É caracterizada por sintomas de
+O TDA é uma condição neurobiológica de causas genéticas, que afeta milhões de pessoas em todo o mundo. É caracterizada por sintomas de
 desatenção, impulsividade, e, em alguns casos, hiperatividade, afetando significativamente o
 desempenho acadêmico, profissional e social dos afetados. Embora o diagnóstico clínico do
 TDA seja baseado tradicionalmente em entrevistas e questionários subjetivos, avanços
 tecnológicos têm permitido o uso de ferramentas mais robustas e quantitativas para apoiar
 esse processo. \textcite{BVS2014}
-Entre essas ferramentas, destaca-se o eye tracking (ou rastramento ocular), esta é uma técnica
+Entre essas ferramentas, destaca-se o \textit{eye tracking} (do português, rastramento ocular), esta é uma técnica
 que consiste em usar o posicionamento dos olhos de uma pessoa para obter informações
 sobre onde ela está olhando. Isso pode ser feito usando luzes infravermelhas, que calculam
 exatamente onde a pessoa está olhando com base nas reflexões da luz na retina, ou por
 meio de câmeras que monitoram visualmente a posição dos olhos e identificam sua direção.
 
-Em ambientes controlados, o teste com eye tracking envolve a realização de tarefas
+Em ambientes controlados, o teste com \textit{eye tracking} envolve a realização de tarefas
 padronizadas, nas quais o comportamento visual do participante é monitorado sem
 interferência direta de um moderador. Essa abordagem objetiva permite uma coleta mais
 confiável de dados, reduzindo o viés associado ao autorrelato e aumentando a credibilidade
@@ -43,13 +42,13 @@ utilizada na neuropsicologia para avaliar métricas de atenção sustentada, imp
 tempo de resposta e variabilidade dos tempos de reação. Trata-se de uma tarefa
 computadorizada na qual o usuário responde e reage a estímulos apresentados
 sequencialmente, permitindo medidas de desempenho atencional ao longo do tempo. Os
-serious games, ou jogos sérios, são aplicações digitais desenvolvidas com finalidades que
+\textit{serious games}, ou jogos sérios, são aplicações digitais desenvolvidas com finalidades que
 vão além do entretenimento, como educação, treinamento ou reabilitação cognitiva. No
 contexto ne análises neuropsicológicas, eles vêm sendo utilizados como ferramentas
 complementares aos testes tradicionais, oferecendo ambientes imersivos e interativos que
 auxiliam no engajamento do usuário e a mensuração de habilidades cognitivas.
 
-Com isso, a aplicação do eye tracking em algo como os jogos sérios, podem servir não
+Com isso, a aplicação do \textit{eye tracking} em algo como os jogos sérios, podem servir não
 apenas como ferramentas para complementar o diagnóstico clínico, mas também como um
 potencial instrumento de triagem inicial. A análise dos dados pode indicar o grau de
 desatenção apresentado por um indivíduo em diferentes contextos e contribuir para decisões
