--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -8,9 +8,9 @@ O experimento é estruturado como um jogo digital de temática espacial, compost
 três fases com níveis crescentes de dificuldade. A mecânica de jogo foi desenhada para simular os
 princípios do TDC, promovendo a exposição contínua a estímulos visuais por períodos prolongados e exigindo respostas rápidas e consistentes por parte do participante. Ao longo de cada fase, o sistema registra métricas relacionadas à atenção, como erros de omissão (quando o participante não responde a um estímulo-alvo), erros de comissão (quando não mantém foco por tempo suficiente no alvo), tempo de reação e variabilidade temporal das respostas. COLOCAR REF
 
-Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca WebGazer para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Esses dados permitem identificar padrões de atenção ou desatenção de acordo com nossa base de dados em cada etapa da atividade. Todas as fases contam com música de fundo, cuja intensidade e ritmo são ajustados conforme o nível de dificuldade, de forma a potencializar a sobrecarga sensorial e dificultar a concentração.
+Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca \textit{WebGazer} para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Esses dados permitem identificar padrões de atenção ou desatenção de acordo com nossa base de dados em cada etapa da atividade. Todas as fases contam com música de fundo, cuja intensidade e ritmo são ajustados conforme o nível de dificuldade, de forma a potencializar a sobrecarga sensorial e dificultar a concentração.
 
-Após o realizar login, o participante é direcionado para a página de instruções, onde são apresentadas a sequência de como calibrar o olhar para poder prosseguir para o jogo. Antes de cada fase, exitem as instruções da própria fase. Em seguida, o usuário inicia a primeira fase do teste. 
+Após o realizar \textit{login}, o participante é direcionado para a página de instruções, onde são apresentadas a sequência de como calibrar o olhar para poder prosseguir para o jogo. Antes de cada fase, existem as instruções da mesma. Em seguida, o usuário inicia a primeira etapa do teste. 
 
 \begin{figure}[H]
     \centering
@@ -33,9 +33,9 @@ objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante 
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na segunda fase, são apresentadas cinco estrelas estáticas que brilham individualmente em sequência. Simultaneamente, três planetas transitam pela tela, atuando como estímulos secundários que o participante deve reconhecer. Ao término desta fase, o usuário responde a um formulário utilizando botões IoT, cada um correspondente a um planeta específico. O objetivo é que o participante aperte o botão do planeta X se, e somente se, o tiver observado em trânsito. Essa etapa visa mensurar a capacidade de identificar alvos dinâmicos (os planetas) enquanto o participante mantém o foco em estímulos estáticos (as estrelas). A trilha sonora, que se torna mais intensa e acelerada, tem o propósito de aumentar o nível de exigência atencional e avaliar a concentração diante de múltiplos estímulos visuais e auditivos.
+Na segunda fase, são apresentadas cinco estrelas estáticas que brilham individualmente em sequência. Simultaneamente, três planetas transitam pela tela, atuando como estímulos secundários que o participante deve reconhecer. Ao término desta fase, o usuário responde a um formulário utilizando botões \textit{IoT} (do inglês, \textit{Internet of Things}, ou Internet das Coisas), cada um correspondente a um planeta específico. O objetivo é que o participante aperte o botão do planeta X se, e somente se, o tiver observado em trânsito. Essa etapa visa mensurar a capacidade de identificar alvos dinâmicos (os planetas) enquanto o participante mantém o foco em estímulos estáticos (as estrelas). A trilha sonora, que se torna mais intensa e acelerada, tem o propósito de aumentar o nível de exigência atencional e avaliar a concentração diante de múltiplos estímulos visuais e auditivos.
 
-Para a construção do dispositivo de controle da IoT, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento Arduino, três botões do tipo push-button, três resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do Arduino, configuradas como entradas com resistores pull-down para garantir leituras estáveis [COMPLEMENTAR MAIS QUANDO ESTIVER PRONTO]. Dessa forma, ao término da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. [COLOCAR BOTÃO 1 É DE SATURNO, POR EXEMPLO]. O Arduino foi programado para detectar os eventos de pressionamento dos botões e enviar os dados correspondentes ao backend do sistema por meio de comunicação serial. Essa comunicação permite o registro e a contabilização das respostas do participante durante a referida fase do jogo. Em futuras iterações do projeto, planeja-se o aperfeiçoamento estético e ergonômico do controle, por meio da substituição dos botões convencionais por peças personalizadas, modeladas em software CAD e fabricadas via impressão 3D, com design mais atrativo e ergonômico para crianças. Além disso, planeja-se construir uma case para o controle utilizando filamentos de plástico biodegradável [NÃO É ESSE O NOME, VER COM FREDERICO], visando a sustentabilidade ambiental do projeto.
+Para a construção do dispositivo de controle da \textit{IoT}, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento Arduino, três botões do tipo push-button, três resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do Arduino, configuradas como entradas com resistores pull-down para garantir leituras estáveis [COMPLEMENTAR MAIS QUANDO ESTIVER PRONTO]. Dessa forma, ao término da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. [COLOCAR BOTÃO 1 É DE SATURNO, POR EXEMPLO]. O Arduino foi programado para detectar os eventos de pressionamento dos botões e enviar os dados correspondentes ao backend do sistema por meio de comunicação serial. Essa comunicação permite o registro e a contabilização das respostas do participante durante a referida fase do jogo. Em futuras iterações do projeto, planeja-se o aperfeiçoamento estético e ergonômico do controle, por meio da substituição dos botões convencionais por peças personalizadas, modeladas em software CAD e fabricadas via impressão 3D, com design mais atrativo e ergonômico para crianças. Além disso, planeja-se construir uma case para o controle utilizando filamentos de plástico sustentável, visando a sustentabilidade ambiental do projeto.
 
 \begin{figure}[H]
     \centering
