--- a/f299-template-pi-paper/Topicos/objetivo.tex
+++ b/f299-template-pi-paper/Topicos/objetivo.tex
@@ -1,13 +1,13 @@
 Desenvolver uma plataforma digital gamificada, acessível por navegador, que utiliza
 rastreamento ocular e métricas de desempenho atencional para auxiliar na triagem inicial de
-indícios do Transtorno de Déficit de Atenção (TDA) em crianças de 10 a 12 anos.
+indícios do TDA em crianças de 10 a 12 anos.
 
 \subsection*{OBJETIVOS ESPECÍFICOS} 
 
 \begin{itemize}
-    \item Integrar o Teste de Desempenho Contínuo (TDC) a um jogo digital com tarefas que
+    \item Integrar o TDC a um jogo digital com tarefas que
     simulam desafios atencionais.
-    \item  Aplicar técnicas de rastreamento ocular em tempo real para registrar padrões de
+    \item  Aplicar técnicas de \textit{eye tracking} em tempo real para registrar padrões de
     atenção durante a execução das tarefas.
     \item Processar automaticamente os dados coletados e compará-los com parâmetros
     normativos para gerar feedback ao usuário.
