imagem da terceira fase

--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -41,6 +41,7 @@ Para a construção do dispositivo de controle da \textit{IoT}, foram empregados
     \centering
     \caption{Terceira fase}%
     \label{fig:terceira-fase}
+    \includegraphics[width=\textwidth]{terceira-fase.png}%
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
