feat: imagens dos diagramas UML e redes

--- a/f299-template-pi-artifacts/fatec-template.tex
+++ b/f299-template-pi-artifacts/fatec-template.tex
@@ -36,12 +36,12 @@
 
     Esse é um exemplo de diagrama de caso de uso, você deverá descrever todos os componentes presentes no diagrama (atores e funcionalidades do sistema).
 
-            \begin{figure}[h]
+\begin{figure}[h]
 \centering
 \caption{Diagrama de caso de uso}%
 \label{fig:diagrama-caso-uso}
  \includegraphics[width=1.1\textwidth]{Logos/caso_de_uso_1.jpg}
-\SourceOrNote{Maia (2024)}
+\SourceOrNote{Do próprio autor (2025)}
 \end{figure}
 
     Não deixe a seção terminar com a imagem então sempre adicione um texto após a mesma.
@@ -54,9 +54,9 @@
     \begin{figure}[h]
 \centering
 \caption{Diagrama de classe}%
-\label{fig:diagrama-classe}
- \includegraphics[width=0.8\textwidth]{Logos/diagramaclasse.png}
-\SourceOrNote{Maia (2024)}
+\label{fig:diagrama-de-classe}
+\includegraphics[width=0.8\textwidth]{Logos/diagrama-de-classe.png}
+\SourceOrNote{Do próprio autor (2025)}
 \end{figure}
 
      Não deixe a seção terminar com a imagem então sempre adicione um texto após a mesma.
@@ -69,11 +69,24 @@ Esse é um exemplo de diagrama de objetos.
         \begin{figure}[h]
 \centering
 \caption{Diagrama de objetos}%
-\label{fig:diagrama-objetos}
- \includegraphics[width=0.8\textwidth]{Logos/diagrama_objetos.png}
-\SourceOrNote{Maia (2024)}
+\label{fig:diagrama-de-objetos}
+ \includegraphics[width=0.8\textwidth]{Logos/diagrama-de-objetos.png}
+\SourceOrNote{Do próprio autor (2025)}
 \end{figure}
 
 Não deixe a seção terminar com a imagem então sempre adicione um texto após a mesma.
+
+\section*{Diagrama de redes}
+    Esse é um exemplo de diagrama de redes, você deverá descrever todos os componentes presentes no diagrama (atores e funcionalidades do sistema).
+
+\begin{figure}[h]
+\centering
+\caption{Diagrama de redes}%
+\label{fig:diagrama-de-redes}
+\includegraphics[width=1.1\textwidth]{Logos/diagrama-de-redes.png}
+\SourceOrNote{Do próprio autor (2025)}
+\end{figure}
+
+    Não deixe a seção terminar com a imagem então sempre adicione um texto após a mesma.
 
 \end{document}
