introducao e pequenas alteracoes na metodologia

--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -29,6 +29,10 @@ da análise. Além disso, a comparação dos dados obtidos com padrões normativ
 identificar desvios significativos no desempenho visual atencional, muitas vezes
 imperceptíveis a métodos tradicionais.
 
+A Inteligência Artificial (IA), é um campo da computação dedicado à criação de sistemas capazes de replicar a habilidade humana de executar tarefas que requerem percepção, raciocinio, aprendizado e tomada de decisão. A IA pode ser dividida em IA Forte e IA Fraca, \textcite{sep-chinese-room} define a IA Forte como programas que conseguem, além de entender a linguagem natural, também conseguem ter todas as características de raciocinio de um humano. A IA Fraca seria capaz de somente replicar tarefas específicas, e não possuir capacidade de raciocínio. A capacidade da IA de realizar tarefas é obtida através de algoritmos de aprendizagem profunda, processamento de linguagem natural e análise de dados.
+
+O conceito de Internet das Coisas (do inglês, Internet of Things, ou IoT) vem da conexão de dispostivos fisícos (como sensores, dispositivos inteligêntes, eletrodomésticos, etc. ) à internet por meio de protocolos de comunicação, o que permite que os dados coletados sejam amplamente distribuídos e compartilhados de forma autônoma. A IoT integra computação em nuvem, comunicação de máquina e análise de dados para criar sistemas integrados e inteligentes. https://iot.ieee.org/
+ 
 Quando aplicada em um teste diagnóstico, a técnica permite acompanhar com
 precisão os movimentos dos olhos de um indivíduo durante a realização de tarefas
 específicas, fornecendo dados objetivos e detalhados sobre onde, por quanto tempo e em
@@ -50,7 +54,7 @@ auxiliam no engajamento do usuário e a mensuração de habilidades cognitivas.
 
 Com isso, a aplicação do \textit{eye tracking} em algo como os jogos sérios, podem servir não
 apenas como ferramentas para complementar o diagnóstico clínico, mas também como um
-potencial instrumento de triagem inicial. A análise dos dados pode indicar o grau de
+potencial instrumento de triagem inicial. A análise dos dados com IA pode indicar o grau de
 desatenção apresentado por um indivíduo em diferentes contextos e contribuir para decisões
 clínicas mais embasadas. Assim, propomos por meio deste estudo a criação de um software
 gamificado, que usa as informações obtidas pelo rastreamento ocular de possíveis afetados
