--- a/f299-template-pi-paper/fatec-article.bib
+++ b/f299-template-pi-paper/fatec-article.bib
@@ -264,3 +264,14 @@
   url       = {https://webgazer.cs.brown.edu/}
 }
 ```
+
+@InCollection{sep-chinese-room,
+	author       =	{Cole, David},
+	title        =	{{The Chinese Room Argument}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2024/entries/chinese-room/}},
+	year         =	{2024},
+	edition      =	{{W}inter 2024},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
