adiciona a secao da pesquisa na metodologia

--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -49,9 +49,9 @@ Na terceira fase, a demanda cognitiva é intensificada pela necessidade de alter
 
 Ao término das três fases, o sistema apresenta ao participante um resumo dos resultados com base nas métricas TDC. Para isso, são utilizados os registros mais recentes obtidos pelo rastreamento ocular, que correspondem às três fases concluídas pelo jogador. Com base nesses dados, o sistema gera um feedback textual interpretativo, apresentando mensagens como: “Sua atenção está conforme o esperado”, “Sua atenção está acima do esperado” ou “Sua atenção está abaixo do esperado.”, de acordo com o desempenho observado.
 
-[2 PARÁGRAFOS SOBRE A PESQUISA DE CAMPO: PRIMEIRO EXPLICANDO TODO O MÉTODO E OS DETALHES DA PESQUISA, O SEGUNDO RELACIONANDO A METODOLOGIA DAS FASES (E DO SISTEMA NO GERAL) COM AS INFORMAÇÕES OBTIDAS DA PESQUISA DE CAMPO]
-
 Para aprofundar a compreensão do tema e garantir um melhor alinhamento profissional, foi conduzida uma pesquisa de campo com quatro profissionais da área da Psicologia. As entrevistas abordaram a viabilidade técnica do projeto, os sintomas mais recorrentes do TDA e os tipos de distrações aos quais pessoas com esse transtorno são mais suscetíveis.
+
+A análise dos resultados revelou que estímulos de movimento, cores e sons são recursos fundamentais para o desenvolvimento das distrações nas fases do experimento. Além disso, destacou-se a importância de incluir uma fase específica em que os distratores atuem como elemento central da avaliação, ou seja, em que o objetivo principal seja identificá-los, mesmo quando essa meta não estiver explicitamente informada ao participante.
 
 A plataforma é desenvolvida com tecnologias \textit{web}, permitindo acesso remoto e execução
 direta em \textit{browsers} modernos. O teste é realizado de forma autônoma pelo usuário, em ambiente silencioso e seguindo instruções fornecidas pela própria plataforma.
