corrige a explicavao da segunda fase da metodolgia e melhora a relacao com o paragrafo da pesquisa

--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -35,6 +35,10 @@ objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante 
 
 Na segunda fase, são apresentadas cinco estrelas estáticas que brilham individualmente em sequência. Simultaneamente, três planetas transitam pela tela, atuando como estímulos secundários que o participante deve reconhecer. Ao término desta fase, o usuário responde a um formulário utilizando botões \textit{IoT}, cada um correspondente a um planeta específico. O objetivo é que o participante aperte o botão do planeta X se, e somente se, o tiver observado em trânsito. Essa etapa visa mensurar a capacidade de identificar alvos dinâmicos (os planetas) enquanto o participante mantém o foco em estímulos estáticos (as estrelas). A trilha sonora, que se torna mais intensa e acelerada, tem o propósito de aumentar o nível de exigência atencional e avaliar a concentração diante de múltiplos estímulos visuais e auditivos.
 
+Na segunda fase do experimento, o participante é instruído a concentrar sua atenção nas cinco estrelas estáticas exibidas na tela, que brilham de forma sequencial. Durante essa tarefa, três planetas em movimento atravessam o campo visual, atuando como distratores não mencionados nas instruções. Ao término da exibição, o participante deve indicar, por meio de botões IoT, quais planetas conseguiu perceber durante a execução da tarefa principal.
+A expectativa é que indivíduos com maior capacidade de atenção mantenham o foco na tarefa principal, ao passo que aqueles com dificuldades atencionais tendam a desviar o olhar e identificar os distratores. Essa dinâmica permite avaliar a suscetibilidade à distração de maneira implícita e próxima das situações reais de dispersão cognitiva.
+A trilha sonora, que se torna gradualmente mais intensa e acelerada, amplia a carga cognitiva e permite observar como múltiplos estímulos simultâneos afetam a manutenção da atenção.
+
 Para a construção do dispositivo de controle da \textit{IoT}, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento Arduino, três botões do tipo push-button, três resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do Arduino, configuradas como entradas com resistores pull-down para garantir leituras estáveis [COMPLEMENTAR MAIS QUANDO ESTIVER PRONTO]. Dessa forma, ao término da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. [COLOCAR BOTÃO 1 É DE SATURNO, POR EXEMPLO]. O Arduino foi programado para detectar os eventos de pressionamento dos botões e enviar os dados correspondentes ao backend do sistema por meio de comunicação serial. Essa comunicação permite o registro e a contabilização das respostas do participante durante a referida fase do jogo. Em futuras iterações do projeto, planeja-se o aperfeiçoamento estético e ergonômico do controle, por meio da substituição dos botões convencionais por peças personalizadas, modeladas em software CAD e fabricadas via impressão 3D, com design mais atrativo e ergonômico para crianças. Além disso, planeja-se construir uma case para o controle utilizando filamentos de plástico sustentável, visando a sustentabilidade ambiental do projeto.
 
 \begin{figure}[H]
@@ -49,9 +53,10 @@ Na terceira fase, a demanda cognitiva é intensificada pela necessidade de alter
 
 Ao término das três fases, o sistema apresenta ao participante um resumo dos resultados com base nas métricas TDC. Para isso, são utilizados os registros mais recentes obtidos pelo rastreamento ocular, que correspondem às três fases concluídas pelo jogador. Com base nesses dados, o sistema gera um feedback textual interpretativo, apresentando mensagens como: “Sua atenção está conforme o esperado”, “Sua atenção está acima do esperado” ou “Sua atenção está abaixo do esperado.”, de acordo com o desempenho observado.
 
-Para aprofundar a compreensão do tema e garantir um melhor alinhamento profissional, foi conduzida uma pesquisa de campo com quatro profissionais da área da Psicologia. As entrevistas abordaram a viabilidade técnica do projeto, os sintomas mais recorrentes do TDA e os tipos de distrações aos quais pessoas com esse transtorno são mais suscetíveis.
+Com o objetivo de aprofundar a compreensão do tema e promover um alinhamento mais preciso entre os aspectos técnicos e psicológicos do projeto, foi conduzida uma pesquisa de campo com quatro profissionais da área da Psicologia. As entrevistas buscaram avaliar a viabilidade técnica da proposta, identificar os sintomas mais recorrentes do Transtorno de Déficit de Atenção (TDA) e compreender os tipos de estímulos que mais influenciam os processos de distração em indivíduos com esse transtorno.
 
-A análise dos resultados revelou que estímulos de movimento, cores e sons são recursos fundamentais para o desenvolvimento das distrações nas fases do experimento. Além disso, destacou-se a importância de incluir uma fase específica em que os distratores atuem como elemento central da avaliação, ou seja, em que o objetivo principal seja identificá-los, mesmo quando essa meta não estiver explicitamente informada ao participante.
+A análise qualitativa dos dados revelou que estímulos visuais e auditivos, especialmente movimento, cor e som, exercem papel determinante na indução de distrações, devendo, portanto, ser considerados elementos centrais no planejamento das fases experimentais. Essa lógica foi implementada em todas as fases do projeto.
+Além disso, os profissionais destacaram a importância de incluir uma etapa em que os distratores estejam presentes de forma indireta, sem que o participante seja instruído a focar neles.
 
 A plataforma é desenvolvida com tecnologias \textit{web}, permitindo acesso remoto e execução
 direta em \textit{browsers} modernos. O teste é realizado de forma autônoma pelo usuário, em ambiente silencioso e seguindo instruções fornecidas pela própria plataforma.
